[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/head.gd" type="Script" id=1]
[ext_resource path="res://sprites/ali-oji-damagediii.png" type="Texture" id=2]
[ext_resource path="res://sprites/ali-oji-damagedi.png" type="Texture" id=3]
[ext_resource path="res://sprites/ali-oji-damagedii.png" type="Texture" id=4]
[ext_resource path="res://sprites/ali-oji.png" type="Texture" id=5]
[ext_resource path="res://audio/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/laser1.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]

resource_name = "damaged"
length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "damaged2"
length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "damaged3"
length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=4]

length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 16.3268
height = 17.6791

[node name="head" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
SPEEDX = 140

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
hframes = 10
frame = 3
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/damaged = SubResource( 1 )
anims/damaged2 = SubResource( 2 )
anims/damaged3 = SubResource( 3 )
anims/idle = SubResource( 4 )
blend_times = [  ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0.498623, -2.51826 )
scale = Vector2( 1.42449, 1 )
shape = SubResource( 5 )

[node name="Timer2" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.3
one_shot = false
autostart = false

[node name="hit" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="laser" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "laser1"

[node name="Timer3" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_head_area_entered"]

[connection signal="body_entered" from="." to="." method="_on_head_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]


